--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ importlib-metadata==6.8.0
 lxml==5.3.0
 Markdown==3.4.3
 oauthlib==3.2.2
+psycopg2==2.9.7
 pycparser==2.21
 PyJWT==2.7.0
 python3-openid==3.2.0
