--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ oauthlib==3.2.2
 psycopg2==2.9.10
 pycparser==2.21
 PyJWT==2.7.0
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 requests==2.31.0
